--- a/.github/workflows/build-and-test-arm.yaml
+++ b/.github/workflows/build-and-test-arm.yaml
@@ -1,4 +1,4 @@
-name: build-and-test-scheduled
+name: build-and-test-arm
 
 on:
   schedule:
@@ -6,16 +6,20 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test-scheduled:
-    runs-on: ${{ matrix.os }}
+  build-and-test-arm:
+    runs-on: ARM64
     container: ros:galactic
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, ARM64]
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+
+      - name: Remove exec_depend
+        uses: autowarefoundation/autoware-github-actions/remove-exec-depend@tier4/proposal
+
+      - name: Register AutonomouStuff repository
+        uses: autowarefoundation/autoware-github-actions/register-autonomoustuff-repository@tier4/proposal
+        with:
+          rosdistro: galactic
 
       - name: Get self packages
         id: get-self-packages
