--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -43,7 +43,7 @@ jobs:
           files: lcov/total_coverage.info,coveragepy/.coverage
 
       - name: Upload coverage to Codecov
-        if: steps.check_files.outputs.files_exists == 'true'
+        if: ${{ steps.check_files.outputs.files_exists == 'true' }}
         uses: codecov/codecov-action@v2
         with:
           files: lcov/total_coverage.info,coveragepy/.coverage
