--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -38,12 +38,16 @@ jobs:
 
       - name: Check file existence
         id: check_files
-        uses: andstor/file-existence-action@v1
-        with:
-          files: lcov/total_coverage.info,coveragepy/.coverage
+        run: |
+          set -e
+          if [ -f "lcov/total_coverage.info" ] || [ -f "coveragepy/.coverage" ]; then
+            echo ::set-output name=files_exists::"true"
+          else
+            echo ::set-output name=files_exists::"false"
+          fi
 
       - name: Upload coverage to Codecov
-        if: ${{ steps.check_files.outputs.files_exists == 'true' }}
+        if: ${{ steps.check_files.outputs.files_exists == "true" }}
         uses: codecov/codecov-action@v2
         with:
           files: lcov/total_coverage.info,coveragepy/.coverage
