--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -46,7 +46,7 @@ jobs:
           condition: or
 
       - name: Upload coverage to CodeCov
-        if: steps.check-file-existence.outputs.exists == "true"
+        if: ${{ steps.check-file-existence.outputs.exists == 'true' }}
         uses: codecov/codecov-action@v2
         with:
           files: lcov/total_coverage.info,coveragepy/.coverage
