fix(build-and-test): fix argument
Signed-off-by: Keisuke Shima <19993104+KeisukeShima@users.noreply.github.com>

--- a/.github/workflows/build-and-test-pr.yaml
+++ b/.github/workflows/build-and-test-pr.yaml
@@ -40,7 +40,7 @@ jobs:
         id: check-file-existence
         uses: autowarefoundation/autoware-github-actions/check-file-existence@tier4/proposal
         with:
-          file-path: |
+          files: |
             lcov/total_coverage.info
             coveragepy/.coverage
           condition: or
