--- a/.github/workflows/check-build-depends.yaml
+++ b/.github/workflows/check-build-depends.yaml
@@ -1,19 +1,18 @@
-name: build-and-test
+name: check-build-depends
 
 on:
-  push:
-    branches:
-      - main
-      - tier4/proposal
-  schedule:
-    - cron: 0 19 * * * # run at 4 AM JST
-  workflow_dispatch:
+  pull_request:
+    paths:
+      - build_depends.repos
 
 jobs:
-  build-and-test:
+  check-build-depends:
     runs-on: ubuntu-latest
     container: ghcr.io/autowarefoundation/autoware-universe:latest
     steps:
+      - name: Cancel previous runs
+        uses: styfle/cancel-workflow-action@0.9.1
+
       - name: Check out repository
         uses: actions/checkout@v2
 
@@ -35,20 +34,3 @@ jobs:
           rosdistro: galactic
           target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
           build-depends-repos: build_depends.repos
-
-      - name: Check the existence of coverage files
-        id: check-file-existence
-        uses: autowarefoundation/autoware-github-actions/check-file-existence@tier4/proposal
-        with:
-          files: |
-            lcov/total_coverage.info
-            coveragepy/.coverage
-          condition: or
-
-      - name: Upload coverage to CodeCov
-        if: ${{ steps.check-file-existence.outputs.exists == 'true' }}
-        uses: codecov/codecov-action@v2
-        with:
-          files: lcov/total_coverage.info,coveragepy/.coverage
-          fail_ci_if_error: true
-          verbose: true
