--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,8 +3,7 @@ name: build-and-test
 on:
   push:
     branches:
-      - main
-      - tier4/proposal
+      - ${{ github.event.repository.default_branch }}
   schedule:
     - cron: 0 19 * * * # run at 4 AM JST
   workflow_dispatch:
