--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-test:
-    if: ${{ github.ref_name == github.event.repository.default_branch }}
+    if: ${{ github.event_name != 'push' || github.ref_name == github.event.repository.default_branch }}
     runs-on: ubuntu-latest
     container: ghcr.io/autowarefoundation/autoware-universe:latest
     steps:
