change title and branch name
Signed-off-by: Kenji Miyake <kenji.miyake@tier4.jp>

--- a/.github/workflows/sync-files-reverse-reference.yaml
+++ b/.github/workflows/sync-files-reverse-reference.yaml
@@ -19,3 +19,6 @@ jobs:
         with:
           token: ${{ steps.generate-token.outputs.token }}
           config: .github/sync-files-reverse-reference.yaml
+          pr-branch: sync-files-of-reverse-references
+          pr-title: "chore: sync files of reverse references"
+          pr-commit-message: "chore: sync files of reverse references"
