--- a/.github/workflows/build-and-test-differential-self-hosted.yaml
+++ b/.github/workflows/build-and-test-differential-self-hosted.yaml
@@ -1,4 +1,4 @@
-name: build-and-test-arm-pr
+name: build-and-test-differential-self-hosted
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
     with:
       label: ARM64
 
-  build-and-test-arm:
+  build-and-test-differential-self-hosted:
     needs: prevent-no-label-execution
     if: ${{ needs.prevent-no-label-execution.outputs.run == 'true' }}
     runs-on: [self-hosted, linux, ARM64]
