--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -1,10 +1,10 @@
-name: build-and-test-pr
+name: build-and-test-differential
 
 on:
   pull_request:
 
 jobs:
-  build-and-test:
+  build-and-test-differential:
     runs-on: ubuntu-latest
     container: ghcr.io/autowarefoundation/autoware-universe:latest
     steps:
@@ -53,7 +53,7 @@ jobs:
           fail_ci_if_error: false
           verbose: true
 
-  clang-tidy:
+  clang-tidy-differential:
     runs-on: ubuntu-latest
     container: ros:galactic
     needs: build-and-test
