--- a/.github/workflows/build-and-test-self-hosted.yaml
+++ b/.github/workflows/build-and-test-self-hosted.yaml
@@ -1,4 +1,4 @@
-name: build-and-test-arm
+name: build-and-test-self-hosted
 
 on:
   schedule:
@@ -6,8 +6,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test-arm:
-    runs-on: ARM64
+  build-and-test-self-hosted:
+    runs-on: [self-hosted, linux, ARM64]
     container: ghcr.io/autowarefoundation/autoware-universe:latest
     steps:
       - name: Check out repository
