--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -56,7 +56,7 @@ jobs:
   clang-tidy-differential:
     runs-on: ubuntu-latest
     container: ros:galactic
-    needs: build-and-test
+    needs: build-and-test-differential
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
