--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -5,3 +5,4 @@
     - source: .github/workflows/build-and-test-differential-self-hosted.yaml
     - source: .github/workflows/build-and-test-self-hosted.yaml
     - source: .github/workflows/check-build-depends.yaml
+    - source: .github/workflows/clang-tidy-pr-comments.yaml
