--- a/.github/workflows/sync-files-reverse-reference.yaml
+++ b/.github/workflows/sync-files-reverse-reference.yaml
@@ -15,7 +15,7 @@ jobs:
           private_key: ${{ secrets.PRIVATE_KEY }}
 
       - name: Run sync-files
-        uses: autowarefoundation/autoware-github-actions/sync-files@tier4/proposal
+        uses: autowarefoundation/autoware-github-actions/sync-files@v1
         with:
           token: ${{ steps.generate-token.outputs.token }}
           config: .github/sync-files-reverse-reference.yaml
