--- a/.github/sync-files.yaml
+++ b/.github/sync-files.yaml
@@ -11,10 +11,12 @@
     - source: .github/PULL_REQUEST_TEMPLATE/small-change.md
     - source: .github/PULL_REQUEST_TEMPLATE/standard-change.md
     - source: .github/dependabot.yaml
+    - source: .github/stale.yml
     - source: .github/workflows/pre-commit.yaml
     - source: .github/workflows/pre-commit-optional.yaml
     - source: .github/workflows/semantic-pull-request.yaml
     - source: .github/workflows/spell-check-differential.yaml
+    - source: .github/workflows/sync-files.yaml
     - source: .clang-format
     - source: .markdown-link-check.json
     - source: .markdownlint.yaml
