--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -6,4 +6,4 @@
     - source: .github/workflows/build-and-test-self-hosted.yaml
     - source: .github/workflows/check-build-depends.yaml
     - source: .github/workflows/clang-tidy-pr-comments.yaml
-    - source: .github/workflows/sync-files.yaml
+    - source: codecov.yaml
