--- a/.github/workflows/build-and-test-with-reverse-depends.yaml
+++ b/.github/workflows/build-and-test-with-reverse-depends.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build-and-test-with-reverse-depends:
     runs-on: ubuntu-latest
-    container: ghcr.io/autowarefoundation/autoware-universe:latest
+    container: ros:galactic
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
