--- a/autoware_utils/CMakeLists.txt
+++ b/autoware_utils/CMakeLists.txt
@@ -1,14 +1,11 @@
 cmake_minimum_required(VERSION 3.14)
-project(tier4_autoware_utils)
+project(autoware_utils)
 
 find_package(autoware_cmake REQUIRED)
 autoware_package()
 
-find_package(Boost REQUIRED)
-
-ament_auto_add_library(tier4_autoware_utils SHARED
-  src/tier4_autoware_utils.cpp
-  src/geometry/boost_polygon_utils.cpp
+ament_auto_add_library(autoware_utils SHARED
+  src/autoware_utils.cpp
 )
 
 if(BUILD_TESTING)
@@ -16,10 +13,10 @@ if(BUILD_TESTING)
 
   file(GLOB_RECURSE test_files test/**/*.cpp)
 
-  ament_add_ros_isolated_gtest(test_tier4_autoware_utils ${test_files})
+  ament_add_ros_isolated_gtest(test_autoware_utils ${test_files})
 
-  target_link_libraries(test_tier4_autoware_utils
-    tier4_autoware_utils
+  target_link_libraries(test_autoware_utils
+    autoware_utils
   )
 endif()
 
