remove reverse_depends/map/lanelet2_extension
Signed-off-by: Kenji Miyake <kenji.miyake@tier4.jp>

--- a/.github/workflows/build-and-test-with-reverse-depends.yaml
+++ b/.github/workflows/build-and-test-with-reverse-depends.yaml
@@ -32,6 +32,7 @@ jobs:
           yq -i 'del(.repositories.* | select(.url == "https://github.com/autowarefoundation/autoware_common.git"))' reverse_depends/build_depends.repos
           yq -i 'del(.repositories.* | select(.url == "https://github.com/tier4/autoware_auto_msgs.git"))' reverse_depends/build_depends.repos
           vcs import reverse_depends < reverse_depends/build_depends.repos
+          rm -rf reverse_depends/map/lanelet2_extension
 
       - name: Build
         if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
