--- a/.github/workflows/build-and-test-with-reverse-depends.yaml
+++ b/.github/workflows/build-and-test-with-reverse-depends.yaml
@@ -30,7 +30,9 @@ jobs:
       - name: Import depends of reverse depends
         run: |
           yq -i 'del(.repositories.* | select(.url == "https://github.com/autowarefoundation/autoware_common.git"))' reverse_depends/build_depends.repos
+          yq -i 'del(.repositories.* | select(.url == "https://github.com/tier4/autoware_auto_msgs.git"))' reverse_depends/build_depends.repos
           vcs import reverse_depends < reverse_depends/build_depends.repos
+          rm -rf reverse_depends/map/lanelet2_extension
 
       - name: Build
         if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
