--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -24,4 +24,5 @@
       post-commands: |
         sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
         sd "build_depends.humble.repos" "build_depends.repos" {dest}
+    - source: .github/workflows/update-codeowners-from-packages.yaml
     - source: codecov.yaml
