--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -1,29 +1,38 @@
 - repository: autowarefoundation/autoware.universe
   files:
     - source: .github/workflows/build-and-test.yaml
-      post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
-        sd "build_depends.humble.repos" "build_depends.repos" {dest}
+      pre-commands: |
+        sd -s '${{ matrix.container-suffix }}' '' {source}
+        sd -f ms 'container-suffix:.*include:' 'include:' {source}
+
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/build-and-test-differential.yaml
-      post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
-        sd "build_depends.humble.repos" "build_depends.repos" {dest}
+      pre-commands: |
+        sd -s '${{ matrix.container-suffix }}' '' {source}
+        sd -f ms 'container-suffix:.*include:' 'include:' {source}
+
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/build-and-test-differential-self-hosted.yaml
-      post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
-        sd "build_depends.humble.repos" "build_depends.repos" {dest}
+      pre-commands: |
+        sd -s '${{ matrix.container-suffix }}' '' {source}
+        sd -f ms 'container-suffix:.*include:' 'include:' {source}
+
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/build-and-test-self-hosted.yaml
-      post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
-        sd "build_depends.humble.repos" "build_depends.repos" {dest}
+      pre-commands: |
+        sd -s '${{ matrix.container-suffix }}' '' {source}
+        sd -f ms 'container-suffix:.*include:' 'include:' {source}
+
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/cancel-previous-workflows.yaml
     - source: .github/workflows/check-build-depends.yaml
       post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {dest}
         sd "build_depends.humble.repos" "build_depends.repos" {dest}
     - source: .github/workflows/clang-tidy-pr-comments.yaml
-      post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest-cuda" "container: ros:\$1" {dest}
-        sd "build_depends.humble.repos" "build_depends.repos" {dest}
     - source: .github/workflows/update-codeowners-from-packages.yaml
     - source: codecov.yaml
