chore: sync files of reverse references
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/workflows/build-and-test-differential.yaml
+++ b/.github/workflows/build-and-test-differential.yaml
@@ -61,7 +61,7 @@ jobs:
 
   clang-tidy-differential:
     runs-on: ubuntu-latest
-    container: ros:humble
+    container: ros:humble-cuda
     needs: build-and-test-differential
     steps:
       - name: Check out repository
