--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -5,33 +5,33 @@
         sd -s '${{ matrix.container-suffix }}' '' {source}
         sd -f ms 'container-suffix:.*include:' 'include:' {source}
 
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest.*" "container: ros:\$1" {source}
         sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/build-and-test-differential.yaml
       pre-commands: |
         sd -s '${{ matrix.container-suffix }}' '' {source}
         sd -f ms 'container-suffix:.*include:' 'include:' {source}
 
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest.*" "container: ros:\$1" {source}
         sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/build-and-test-differential-self-hosted.yaml
       pre-commands: |
         sd -s '${{ matrix.container-suffix }}' '' {source}
         sd -f ms 'container-suffix:.*include:' 'include:' {source}
 
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest.*" "container: ros:\$1" {source}
         sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/build-and-test-self-hosted.yaml
       pre-commands: |
         sd -s '${{ matrix.container-suffix }}' '' {source}
         sd -f ms 'container-suffix:.*include:' 'include:' {source}
 
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {source}
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest.*" "container: ros:\$1" {source}
         sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/cancel-previous-workflows.yaml
     - source: .github/workflows/check-build-depends.yaml
       post-commands: |
-        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest" "container: ros:\$1" {dest}
+        sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest.*" "container: ros:\$1" {dest}
         sd "build_depends.humble.repos" "build_depends.repos" {dest}
     - source: .github/workflows/clang-tidy-pr-comments.yaml
     - source: .github/workflows/update-codeowners-from-packages.yaml
