--- a/.github/workflows/build-and-test-self-hosted.yaml
+++ b/.github/workflows/build-and-test-self-hosted.yaml
@@ -15,6 +15,8 @@ jobs:
         rosdistro:
           - galactic
           - humble
+        cmake-build-type:
+          - Release
         include:
           - rosdistro: galactic
             container: ros:galactic
@@ -40,6 +42,7 @@ jobs:
           rosdistro: ${{ matrix.rosdistro }}
           target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
           build-depends-repos: ${{ matrix.build-depends-repos }}
+          cmake-build-type: ${{ matrix.cmake-build-type }}
 
       - name: Test
         if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
