--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -17,6 +17,8 @@ jobs:
         rosdistro:
           - galactic
           - humble
+        cmake-build-type:
+          - Release
         include:
           - rosdistro: galactic
             container: ros:galactic
@@ -42,6 +44,7 @@ jobs:
           rosdistro: ${{ matrix.rosdistro }}
           target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
           build-depends-repos: ${{ matrix.build-depends-repos }}
+          cmake-build-type: ${{ matrix.cmake-build-type }}
 
       - name: Test
         if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
