ci(sync-files): sync clang-tidy-pr-comments-manually.yaml

--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -33,5 +33,6 @@
         sd "container: ghcr.io/autowarefoundation/autoware-universe:(\w+)-latest.*" "container: ros:\$1" {source}
         sd "build_depends.humble.repos" "build_depends.repos" {source}
     - source: .github/workflows/clang-tidy-pr-comments.yaml
+    - source: .github/workflows/clang-tidy-pr-comments-manually.yaml
     - source: .github/workflows/update-codeowners-from-packages.yaml
     - source: codecov.yaml
