ci(sync-files): sync .pre-commit-config.yaml

--- a/.github/sync-files-reverse-reference.yaml
+++ b/.github/sync-files-reverse-reference.yaml
@@ -35,4 +35,5 @@
     - source: .github/workflows/clang-tidy-pr-comments.yaml
     - source: .github/workflows/clang-tidy-pr-comments-manually.yaml
     - source: .github/workflows/update-codeowners-from-packages.yaml
+    - source: .pre-commit-config.yaml
     - source: codecov.yaml
