chore: update CODEOWNERS
Signed-off-by: GitHub <noreply@github.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 ### Copied from .github/CODEOWNERS-manual ###
 
 ### Automatically generated from package.xml ###
-autoware_cmake/** kenji.miyake@tier4.jp
-autoware_lint_common/** kenji.miyake@tier4.jp
-autoware_utils/** kenji.miyake@tier4.jp
-tmp/lanelet2_extension/** ryohsuke.mitsudome@tier4.jp
+autoware_cmake/** kenji.miyake@tier4.jp @autowarefoundation/autoware-global-codeowners
+autoware_lint_common/** kenji.miyake@tier4.jp @autowarefoundation/autoware-global-codeowners
+autoware_utils/** kenji.miyake@tier4.jp @autowarefoundation/autoware-global-codeowners
+tmp/lanelet2_extension/** ryohsuke.mitsudome@tier4.jp @autowarefoundation/autoware-global-codeowners
