--- a/.github/workflows/build-and-test-with-reverse-depends.yaml
+++ b/.github/workflows/build-and-test-with-reverse-depends.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   build-and-test-with-reverse-depends:
     runs-on: ubuntu-latest
-    container: ros:galactic
+    container: ros:humble
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -38,7 +38,7 @@ jobs:
         if: ${{ steps.get-self-packages.outputs.self-packages != '' }}
         uses: autowarefoundation/autoware-github-actions/colcon-build@v1
         with:
-          rosdistro: galactic
+          rosdistro: humble
           target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
           build-depends-repos: build_depends.repos
 
@@ -47,6 +47,6 @@ jobs:
         id: test
         uses: autowarefoundation/autoware-github-actions/colcon-test@v1
         with:
-          rosdistro: galactic
+          rosdistro: humble
           target-packages: ${{ steps.get-self-packages.outputs.self-packages }}
           build-depends-repos: build_depends.repos
