--- a/autoware_cmake/package.xml
+++ b/autoware_cmake/package.xml
@@ -9,6 +9,9 @@
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
+  <build_export_depend>ament_cmake_auto</build_export_depend>
+  <build_export_depend>ros_environment</build_export_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
 
