--- a/autoware_cmake/package.xml
+++ b/autoware_cmake/package.xml
@@ -5,6 +5,7 @@
   <version>0.1.0</version>
   <description>CMake scripts for Autoware</description>
   <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
+  <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
