--- a/.github/sync-files.yaml
+++ b/.github/sync-files.yaml
@@ -15,6 +15,7 @@
     - source: .github/workflows/cancel-previous-workflows.yaml
     - source: .github/workflows/github-release.yaml
     - source: .github/workflows/pre-commit.yaml
+    - source: .github/workflows/pre-commit-autoupdate.yaml
     - source: .github/workflows/pre-commit-optional.yaml
     - source: .github/workflows/semantic-pull-request.yaml
     - source: .github/workflows/spell-check-differential.yaml
