--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -28,6 +28,8 @@ jobs:
         uses: jlumbroso/free-disk-space@v1.2.0
         with:
           tool-cache: false
+          dotnet: false
+          large-packages: false
 
       - name: Remove exec_depend
         uses: autowarefoundation/autoware-github-actions/remove-exec-depend@v1
