ci: disable swap-strage
Signed-off-by: Shumpei Wakabayashi <shumpei.wakabayashi@tier4.jp>

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -29,6 +29,7 @@ jobs:
         with:
           tool-cache: false
           dotnet: false
+          swap-storage: false
           large-packages: false
 
       - name: Remove exec_depend
