--- a/autoware_utils/package.xml
+++ b/autoware_utils/package.xml
@@ -11,6 +11,7 @@
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <buildtool_depend>autoware_cmake</buildtool_depend>
 
+  <depend>libboost-system-dev</depend>
   <depend>builtin_interfaces</depend>
   <depend>rclcpp</depend>
   <depend>unique_identifier_msgs</depend>
