--- a/.github/workflows/build-and-test-arm64.yaml
+++ b/.github/workflows/build-and-test-arm64.yaml
@@ -53,12 +53,12 @@ jobs:
 
       - name: Upload coverage to CodeCov
         if: ${{ steps.test.outputs.coverage-report-files != '' }}
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           files: ${{ steps.test.outputs.coverage-report-files }}
           fail_ci_if_error: false
           verbose: true
-          flags: total
+          flags: total-arm64
 
       - name: Show disk space after the tasks
         run: df -h
