--- a/.github/workflows/build-and-test-differential-arm64.yaml
+++ b/.github/workflows/build-and-test-differential-arm64.yaml
@@ -18,6 +18,7 @@ jobs:
     needs: make-sure-label-is-present
     if: ${{ needs.make-sure-label-is-present.outputs.result == 'true' }}
     runs-on: [self-hosted, linux, ARM64]
+    container: ${{ matrix.container }}
     strategy:
       fail-fast: false
       matrix:
